--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+  <head>
+    <title>SQ2IPS</title>
+  </head>
   <body>
-    <h1>SQ2IPS</h1>
+    <iframe src="https://onlybuzak.github.io">
   </body>
 </html>
