--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>SQ2IPS</title>
   </head>
   <body>
-    <iframe src="https://onlybuzak.github.io">
+    <iframe style="width:100vw; height: 50vh;" src="https://onlybuzak.github.io">
   </body>
 </html>
