--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>SQ2IPS</title>
   </head>
   <body>
-    <iframe style="width:100vw; height: 50vh;" src="https://onlybuzak.github.io">
+    <h1>SQ2IPS</h1>
   </body>
 </html>
